# dci-core-config

./: CMakeLists.txt
idl/: config.idl  configurable.idl
include/dci/: config.hpp
include/dci/config/: api.hpp
src/: config.cpp
